--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-  <title>键盘按键测试 | 西加加斯基</title>
+  <title>键盘按键测试</title>
+<!--   西加加斯基 -->
   <style>
     .kb_sep {
                 height: 32px;
